# hprimecount

./: LICENSE  README.md  hprimecount.cabal  stack.yaml
app/: Main.hs
src/: PrimeCount.hs
