name:                hprimecount
version:             0.0.1.0
synopsis:            Haskell bindings to the primecount library
description:         Haskell bindings to the primecount library providing
                     access to performant implementations of a variety of
                     counting algorithms.

                     Note: This is an experimental package and the API / module names
                     as subject to change.

homepage:            http://github.com/erantapaa/hprimecount
license:             BSD2
license-file:        LICENSE
author:              Erik Rantapaa
maintainer:          erantapaa@gmail.com
stability:           experimental
copyright:           2015 Erik Rantapaa
category:            Math, Algorithms, Number Theory
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PrimeCount
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  extra-libraries:     primecount

executable hprimecount-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2
  build-depends:       base
                     , hprimecount, arithmoi, timeit
  default-language:    Haskell2010

test-suite hprimecount-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hprimecount
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/erantapaa/hprimecount

